test/scopes/accept/example2.rift
let
  type List = Nil | Cons(i64, List)

  fn length(l: List): i64 =
    match l with
      | Nil => 0
      | Cons(x, xs) => 1 + length(xs)

  val l1 = Cons(1, Cons(2, Cons(3, Nil)))
in
  length(l1)
end
